[tool.poetry]
name = "monosurf"
version = "0.1.0"
description = "Python API wrapper for the mono.surf payment system"
authors = ["Mykola Solodukha <mykola@mono.surf>"]
readme = "README.md"
packages = [
    { include = "monosurf" },
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
