[tool.poetry]
name = "monosurf"
version = "0.1.0"
description = "Python API wrapper for the mono.surf payment system"
authors = ["Mykola Solodukha <mykola@mono.surf>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "monosurf" },
]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pylint = "^3.2.6"
pydocstyle = {extras = ["toml"], version = "^6.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
